...
/// Backgrounds an animation can be previewed against.
enum PreviewBackdrop {
  checker('Transparent'),
  dark('Black'),
  light('White'),
  aurora('Aurora'),
  mint('Mint');

  const PreviewBackdrop(this.label);
  final String label;
}

class BackdropFill extends StatelessWidget {
...
